# proxeny

./: .dir-locals.el  .gitignore  CHANGELOG.md  CONFIGURATION.md  Cargo.toml  README.md
.github/workflows/: release-binaries.yml  release-plz-pr.yml  release-plz-release.yml  release-plz.yml  unit-tests.yml
examples/: proxeny-dns01.corn  proxeny.corn  vicarian-12factor.corn  vicarian-dns01.corn  vicarian-http01.corn  vicarian-tls-files.corn
src/: certificates.rs  config.rs  errors.rs  main.rs  proxy.rs
src/certificates/: acme.rs  external.rs  handler.rs  mod.rs  store.rs  tests.rs  watcher.rs
src/config/: mod.rs  tests.rs
src/proxy/: mod.rs  router.rs  services.rs  tests.rs
systemd/: proxeny.service  vicarian.service
tests/: tests.rs  util.rs
tests/data/certs/: snakeoil-2.key  snakeoil-2.pem  www.example.com.crt  www.example.com.key  www.vicarian.no-subject.crt  www.vicarian.no-subject.key
tests/data/certs/acme/: README.txt
tests/data/config/: example_com_simple.corn  no-optionals.corn
tests/integration/: main.rs  tests.rs  util.rs
