[package]
name = "proxeny"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
camino = { version = "1.2.1", features = ["serde1"] }
clap = { version = "4.5.51", features = ["derive"] }
crossbeam-channel = "0.5.15"
http = "1.3.1"
http-serde = "2.1.1"
libcorn = "0.10.0"
itertools = "0.14.0"
notify = { version = "8.2.0", default-features = false, features = ["crossbeam-channel", "fsevent-sys"] }
notify-debouncer-full = { version = "0.6.0", default-features = false, features = ["crossbeam-channel"] }
papaya = "0.2.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_default_utils = "0.3.1"
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
zone-update = "0.5.1"
pingora-core = { version = "0.6.0", features = ["boringssl"] }
pingora-http = "0.6.0"
pingora-proxy = "0.6.0"
pingora-boringssl = "0.6.0"
path-tree = "0.8.3"

[lints.rust]
# FIXME: For early dev, remove before release
dead_code = "allow"
unused = "allow"

[dev-dependencies]
axum = "0.8.7"
ctor = "0.6.1"
nix = { version = "0.30.1", features = ["process", "signal", "term"] }
procfs = "0.18.0"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking"] }
test-context = "0.5.4"
test-log = { version = "0.2.18", features = ["trace"] }
tokio = { version = "1.48.0", features = ["fs"] }
