[package]
name = "proxeny"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
camino = { version = "1.2.1", features = ["serde1"] }
clap = { version = "4.5.53", features = ["derive"] }
http = "1.4.0"
http-serde = "2.1.1"
libcorn = "0.10.0"
itertools = "0.14.0"
notify = { version = "8.2.0", default-features = false, features = ["crossbeam-channel", "fsevent-sys"] }
notify-debouncer-full = { version = "0.6.0", default-features = false, features = ["crossbeam-channel"] }
papaya = "0.2.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_default_utils = { version = "0.3.1", features = ["inline"] }
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
zone-update = { version = "0.5.2", features = ["async"] }
pingora-core = { version = "0.6.0", features = ["boringssl"] }
pingora-http = "0.6.0"
pingora-proxy = "0.6.0"
pingora-boringssl = "0.6.0"
path-tree = "0.8.3"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt", "sync"] }
boring = "4.19.0"
chrono = { version = "0.4.42", default-features = false, features = ["now"] }
acme-micro = "0.13.0"

[lints.rust]
# FIXME: For early dev, remove before release
dead_code = "allow"
#unused = "allow"

[dev-dependencies]
axum = "0.8.7"
ctor = "0.6.1"
nix = { version = "0.30.1", features = ["process", "signal", "term"] }
pem = "3.0.6"
procfs = "0.18.0"
reqwest = { version = "0.12.24", features = ["blocking", "rustls-tls"], default-features = false }
tempfile = "3.23.0"
test-context = "0.5.4"
test-log = { version = "0.2.18", features = ["trace"] }
tokio = { version = "1.48.0", features = ["fs"] }

[package.metadata.bacon]
# For dev
apply_gitignore = false
watch = ["proxeny.corn"]
