[package]
name = "vicarian"
description = "Vicarian is a reverse proxy server with ACME support"
version = "0.1.0"
edition = "2024"

authors = ["Steve Smith <tarkasteve@gmail.com>"]
homepage = "https://github.com/tarka/vicarian"
repository = "https://github.com/tarka/vicarian"
readme = "README.md"

keywords = ["proxy", "https", "reverse-proxy", "pingora"]
categories = ["web-programming::http-server", "network-programming"]
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
boring = "4.19.0"
camino = { version = "1.2.1", features = ["serde1"] }
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
clap = { version = "4.5.53", features = ["derive"] }
dnsclient = "0.2.0"
futures = "0.3.31"
http = "1.4.0"
http-serde = "2.1.1"
instant-acme = { version = "0.8.4", features = ["time"] }

itertools = "0.14.0"
libcorn = "0.10.0"
notify = { version = "8.2.0", default-features = false, features = ["crossbeam-channel", "fsevent-sys"] }
notify-debouncer-full = { version = "0.6.0", default-features = false, features = ["crossbeam-channel"] }
papaya = "0.2.3"
path-tree = "0.8.3"
pingora-boringssl = "0.6.0"
pingora-core = { version = "0.6.0", features = ["boringssl"] }
pingora-http = "0.6.0"
pingora-proxy = "0.6.0"
psl = "2.1.168"
rustls = "0.23.35"
serde = { version = "1.0.228", features = ["derive"] }
serde_default_utils = { version = "0.3.1", features = ["inline"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt", "sync"] }
tracing = "0.1.43"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
zone-update = { version = "0.8.0", features = ["async"] }

[features]
integration_tests = []

[dev-dependencies]
axum = "0.8.7"
ctor = "0.6.3"
nix = { version = "0.30.1", features = ["process", "signal", "term"] }
pem = "3.0.6"
procfs = "0.18.0"
reqwest = { version = "0.12.25", features = ["blocking", "rustls-tls"], default-features = false }
tempfile = "3.23.0"
test-context = "0.5.4"
test-log = { version = "0.2.19", features = ["trace"] }
tokio = { version = "1.48.0", features = ["fs"] }

[package.metadata.bacon]
apply_gitignore = false
watch = ["vicarian.corn"]
